stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_get_stacks_block_info_expect_property_name.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "f4f61c95b8100ce2ccc709a481727b002fac137e607966ebd4b4024b5f60e552",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: stacks-exp-prop-name-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'get-stacks-block-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 963,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 963,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ec500c8a69f9b22bb3a846f3f6409ec44dadb016772762b85d25c5c2a9f9329b",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: stacks-exp-prop-name-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of unresolved function \'get-stacks-block-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 963,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 963,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3fe13890525320eb44077af280329aae270358eb3236b5171f8240dfccd2d3c8",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: stacks-exp-prop-name-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: missing property name for stacks block info introspection) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1066,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1066,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d68e6d77c52bee7b2d7ddb4943c1e68ce493610d434fa544ec10d5163dbf86ea",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: stacks-exp-prop-name-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'get-stacks-block-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 963,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 963,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3bb4bc8f3e4d7a6ce85a523ea6714bc5333773bd68a633a3867ea052e759801b",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: stacks-exp-prop-name-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of unresolved function \'get-stacks-block-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 963,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 963,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c08b1361f2c4789c0ae51f1247cec9493b2a8aefa4844ffeda82afd8b84290cc",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: stacks-exp-prop-name-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: missing property name for stacks block info introspection) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1066,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1066,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b185301a9838616acbff7c205f352cc826c21c4300708aedea7d5293213bbd02",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: stacks-exp-prop-name-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: missing property name for stacks block info introspection) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1066,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1066,
    ),
  )),
]
