stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_illegal_or_unknown_function_application.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "5ad517322daee7a5aaca3c7cbbc0bcdefa9a3445e082cd183f627f5bc844e123",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d431c6a483451b1e89d7411a00c66ffc23951234341ff603bba73ae5b1e5c12b",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6d05ab5c78bf0edddb2d19bc87a5b38666aa7879f36afc1c78671caf660642bf",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e73e473c56500c7c1b77073e71cb71cb45a0890d7be465ef20d1ad46a4594f7c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8b312192e79777bd0c6536916efefd59fa3fd00d32058c71f85b0b543e47df5f",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8b0fb2859c3bc6464d2cb440ebcf8b91444b2533ee1c4c942f171e36f2940b17",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7fa7d2a25ae640a2471c973cafc77190799bed16a3f473e971ba5c6117c022ee",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: illegal-or-unknown-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: use of illegal / unresolved function \'if\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 11,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 961,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 11,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 961,
    ),
  )),
]
